# tldr-rs

./: Cargo.toml  DDD.md.draft  PATTERNS.md  PRD.md.draft  one-shot-tldr.mjs  project-info.md
src/: main.rs
