[package]
name = "tldr-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tldr"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"], default-features = false }
colored = "2"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
